# dynamic-semantic-runtime

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_latency.py  bench_memory.py
dashboard/: app.py  utils.py
dashboard/pages/: 1_latency.py  2_memory.py  3_scalability.py
dashboard/runners/: __init__.py  dsr_runner.py  networkx_runner.py  vectordb_runner.py
examples/: business_rules.py  vehicle_telemetry.py
src/dsr/: __init__.py  atom.py  cache.py  context.py  egraph.py  generator.py  runtime.py
tests/: test_core.py
