[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-semantic-runtime"
version = "0.1.0"
description = "Knowledge representation via on-demand generation instead of explicit persistence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "David Castro"}]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.17",
    "pandas>=2.0",
    "networkx>=3.0",
    "faiss-cpu>=1.7.4",
]

[project.urls]
Repository = "https://github.com/DavidCaastro/dynamic-semantic-runtime"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
